[package]
name = "PyDeduplines"
version = "0.3.1"
authors = ["Gal Ben David <gal@intsights.com>"]
edition = "2018"
description = "Python library for a duplicate lines removal written in Rust"
readme = "README.md"
repository = "https://github.com/intsights/PyDeduplines"
homepage = "https://github.com/intsights/PyDeduplines"
license = "MIT"
keywords = [
    "unique",
    "lines",
    "rust",
    "pyo3",
]

[package.metadata.maturin]
requires-python = ">=3.7"
classifier = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[lib]
name = "pydeduplines"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]

[dependencies]
bstr = "0.2"
ahash = "0.7"
parking_lot = "0.11"
crossbeam-utils = "0.8"
crossbeam-deque = "0.8"

[profile.release]
lto = true
panic = "abort"
