[package]
name = "PyDeduplines"
version = "0.4.0"
authors = ["Gal Ben David <gal@intsights.com>"]
edition = "2018"
description = "Python library for a duplicate lines removal written in Rust"
readme = "README.md"
repository = "https://github.com/intsights/PyDeduplines"
homepage = "https://github.com/intsights/PyDeduplines"
license = "MIT"
keywords = [
    "unique",
    "lines",
    "rust",
    "pyo3",
]

[package.metadata.maturin]
requires-python = ">=3.7"
classifier = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[lib]
name = "pydeduplines"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]

[dependencies]
ahash = "0.7"
memchr = "2"
indexmap = "1"
bytecount = {version = "0.6", features = ["runtime-dispatch-simd"]}
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
parking_lot = "0.11"

[profile.release]
lto = true
panic = "abort"
