[package]
name = "PyDeduplines"
version = "0.6.0"
authors = ["Gal Ben David <gal@intsights.com>"]
edition = "2021"
description = "Python library for a duplicate lines removal written in Rust"
readme = "README.md"
repository = "https://github.com/intsights/PyDeduplines"
homepage = "https://github.com/intsights/PyDeduplines"
license = "MIT"
keywords = [
    "unique",
    "lines",
    "rust",
    "pyo3",
]

[package.metadata.maturin]
requires-python = ">=3.7"
classifier = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[lib]
name = "pydeduplines"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[dependencies]
ahash = "0.7"
bytecount = {version = "0.6", features = ["runtime-dispatch-simd"]}
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
memchr = "2"
parking_lot = "0.12"

[profile.release]
lto = true
panic = "abort"
