[build-system]
requires = ["maturin>=0.11,<0.12"]
build-backend = "maturin"

[tool.maturin]
sdist-include = [
    "src",
    "Cargo.toml",
    "pydeduplines",
]

[tool.poetry]
name = "PyDeduplines"
version = "0.6.0"
authors = ["Gal Ben David <gal@intsights.com>"]
description = "Python library for a duplicate lines removal written in Rust"
readme = "README.md"
repository = "https://github.com/intsights/PyDeduplines"
license = "MIT"
keywords = [
    "unique",
    "lines",
    "rust",
    "pyo3",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "*"
wheel = "*"
pytest-runner = "*"
maturin = "*"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
